# Lucas-Kanade-Tracker

./: CMakeLists.txt  readme.md  test_direct_method.py  test_module.py
src/: cv_wrapper.cpp  cv_wrapper.h  direct_method.cpp  direct_method.h  direct_method_bind.cpp  gaussNewton.cpp  gaussNewton.h  imageBasic.cpp  imageBasic.h  main.cpp  optical_flow.cpp  optical_flow.h  optical_flow_bind.cpp
